# sscli

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  treefmt.nix
src/: get_entry.rs  main.rs
